Fix an issue where touch events were dispatched to the incorrect webview
Was caused by touchscreen_gesture_target_queue_ + prevent default.  The
webview target was calculated on TouchStart and pushed to the the queue.
It was removed on its corresponding GestureTapDown.  However, if the
TouchStart had default behavior prevented, no GestureTapDown would ever
occur, and the queue would forever have an extra element.

Fixed by removal of the touchscreen_gesture_target_queue_ and recalculate
the touchscreen_gesture_target_ on each new GestureTapDown.

Also updates AUTHORS file.

Bug: 736623
Change-Id: If3bf844e2bcfb9a1ca6d6a56cdc7575e0767e6b6

--- a/AUTHORS
+++ b/AUTHORS
@@ -527,6 +527,7 @@ Nagarajan Narayanan <nagarajan.n@samsung.com>
 Nagarjuna Atluri <nagarjuna.a@samsung.com>
 Naiem Shaik <naiem.shaik@gmail.com>
 Naoki Takano <takano.naoki@gmail.com>
+Nathan Fairhurst <nathan.fairhurst@nike.com>
 Naveen Bobbili <naveenbobbili@motorola.com>
 Naveen Bobbili <qghc36@motorola.com>
 Naveen Kumar Devaraj <devarajn@amazon.com>
@@ -858,6 +859,7 @@ Endless Mobile, Inc. <*@endlessm.com>
 Google Inc. <*@google.com>
 Hewlett-Packard Development Company, L.P. <*@hp.com>
 Igalia S.L. <*@igalia.com>
+NIKE, Inc. <*@nike.com>
 NVIDIA Corporation <*@nvidia.com>
 Neverware Inc. <*@neverware.com>
 Opera Software ASA <*@opera.com>
